--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [arm-linux-musleabi, arm-linux-musleabihf, armeb-linux-musleabi, armeb-linux-musleabihf, thumb-linux-musleabi, thumb-linux-musleabihf, thumbeb-linux-musleabi, thumbeb-linux-musleabihf, aarch64-linux-musl, aarch64_be-linux-musl, loongarch64-linux-musl, mips-linux-musleabi, mips-linux-musleabihf, mipsel-linux-musleabi, mipsel-linux-musleabihf, mips64-linux-muslabin32, mips64el-linux-muslabin32, powerpc-linux-musleabi, powerpc-linux-musleabihf, powerpc64-linux-musl, powerpc64le-linux-musl, riscv32-linux-musl, riscv64-linux-musl, s390x-linux-musl, x86-linux-musl, x86_64-linux-musl, hexagon-linux-musl, loongarch64-linux-muslsf, mips64-linux-muslabi64, mips64el-linux-muslabi64, x86_64-linux-muslx32]
+        target: [aarch64-freebsd-none, arm-freebsd-eabihf, powerpc64-freebsd-none, powerpc64le-freebsd-none, riscv64-freebsd-none, x86_64-freebsd-none, aarch64-linux-musl, aarch64_be-linux-musl, arm-linux-musleabi, arm-linux-musleabihf, armeb-linux-musleabi, armeb-linux-musleabihf, hexagon-linux-musl, loongarch64-linux-musl, loongarch64-linux-muslsf, mips-linux-musleabi, mips-linux-musleabihf, mips64-linux-muslabi64, mips64-linux-muslabin32, mips64el-linux-muslabi64, mips64el-linux-muslabin32, mipsel-linux-musleabi, mipsel-linux-musleabihf, powerpc-linux-musleabi, powerpc-linux-musleabihf, powerpc64-linux-musl, powerpc64le-linux-musl, riscv32-linux-musl, riscv64-linux-musl, s390x-linux-musl, thumb-linux-musleabi, thumb-linux-musleabihf, thumbeb-linux-musleabi, thumbeb-linux-musleabihf, x86-linux-musl, x86_64-linux-musl, x86_64-linux-muslx32, aarch64-macos-none, x86_64-macos-none, aarch64-netbsd-none, aarch64_be-netbsd-none, arm-netbsd-eabi, arm-netbsd-eabihf, armeb-netbsd-eabi, armeb-netbsd-eabihf, mips-netbsd-eabi, mips-netbsd-eabihf, mipsel-netbsd-eabi, mipsel-netbsd-eabihf, powerpc-netbsd-eabi, powerpc-netbsd-eabihf, riscv32-netbsd-none, riscv64-netbsd-none, x86-netbsd-none, x86_64-netbsd-none]
     runs-on: ubuntu-24.04
     env:
       ROOTDIR: ${{github.workspace}}
@@ -41,4 +41,9 @@ jobs:
 
           curl -LkSs https://github.com/ziglang/zig-bootstrap/archive/${ZIG_BOOTSTRAP_REV}.tar.gz | gzip -d | tar -x
           mv zig-bootstrap-${ZIG_BOOTSTRAP_REV} zig-bootstrap
-          cp -R ${{github.workspace}}/* zig-bootstrap/zig
+          cp -R ${{github.workspace}}/lib zig-bootstrap/zig
+
+      - name: Build Zig
+        run: |
+          cd zig-bootstrap
+          ./build ${ZIG_TARGET} baseline
