Update and rename build-host.yml to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Host Zig
+name: Build Zig
 on:
   workflow_dispatch:
 
@@ -7,7 +7,11 @@ permissions:
   actions: write
 
 jobs:
-  build-host:
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [aarch64-linux-musl]
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout zig-custom
@@ -19,25 +23,31 @@ jobs:
         run: |
           ZIG_BOOTSTRAP_TARBALL_LINK=$(curl -LkSs https://ziglang.org/download | sed -n 's/.*href="\([^"]*zig-bootstrap[^"]*\.tar\.xz\)".*/\1/p'| head -n1)
           ZIG_BOOTSTRAP_FOLDER_NAME=$(basename $ZIG_BOOTSTRAP_TARBALL_LINK | xargs basename | sed 's/\.tar\.xz$//')
-          ZIG_TARBALL_NAME=$(echo $ZIG_BOOTSTRAP_FOLDER_NAME | sed "s/^zig-bootstrap-/zig-$ZIG_TARGET-/")
-          export ZIG_VERSION_NAME=$(echo $ZIG_BOOTSTRAP_FOLDER_NAME | sed 's/.*-\([0-9].*\)/\1/')
+          ZIG_TARBALL_NAME=$(echo $ZIG_BOOTSTRAP_FOLDER_NAME | sed "s/^zig-bootstrap-/zig-$ZIG_TARGET-$(echo "${{matrix.target}} | cut -d'-' -f1)-linux/")
+          ZIG_VERSION_NAME=$(echo $ZIG_BOOTSTRAP_FOLDER_NAME | sed 's/.*-\([0-9].*\)/\1/')
           echo ZIG_TARBALL_NAME=${ZIG_TARBALL_NAME} >> $GITHUB_ENV
           echo ZIG_VERSION_NAME=${ZIG_VERSION_NAME} >> $GITHUB_ENV
           curl -LkSs $ZIG_BOOTSTRAP_TARBALL_LINK | xz -d | tar -x
           mv $ZIG_BOOTSTRAP_FOLDER_NAME zig-bootstrap
           cp -R ${{github.workspace}}/patches/lib zig-bootstrap/zig
 
-      - name: Build and Archive Host Zig
+      - name: Get Zig
+        run: |
+          cd /usr/local/bin
+          curl -LkSs https://ziglang.org/builds/zig-x86_64-linux-ZIG_VERSION_NAME.tar.xz | sudo xz -d | sudo tar -x
+
+      - name: Build Zig
         run: |
           cd zig-bootstrap
-          ../build-host.sh
-          tar -c out/host | xz -T0 -v >${{github.workspace}}/zig-host.tar.xz
+          ../build.sh ${{matrix.target}} baseline
+          mv out/$ZIG_TARGET-baseline ${{env.ZIG_TARBALL_NAME}}
+          tar -c ${{env.ZIG_TARBALL_NAME}} | xz -T0 -v >${{github.workspace}}/${{env.ZIG_TARBALL_NAME}}.tar.xz
 
       - name: Upload release
         uses: ncipollo/release-action@v1.16.0
         with:
-          tag: host
-          artifacts: ${{github.workspace}}/zig-host.tar.xz
+          tag: ${{env.ZIG_VERSION_NAME}}
+          artifacts: ${{github.workspace}}/${{env.ZIG_TARBALL_NAME}}.tar.xz
           allowUpdates: true
           replacesArtifacts: true
           body: ''
