--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
         run: |
           cd /usr/local/bin
           curl -LkSs https://ziglang.org/builds/zig-x86_64-linux-$ZIG_VERSION_NAME.tar.xz | sudo xz -d | sudo tar -x
+          sudo mv zig-x86_64-linux-$ZIG_VERSION_NAME/* .
+          sudo rmdir zig-x86_64-linux-$ZIG_VERSION_NAME
 
       - name: Build Zig
         run: |
@@ -42,8 +44,6 @@ jobs:
           ../build.sh ${{matrix.target}} baseline
           mv out/$ZIG_TARGET-baseline ${{env.ZIG_TARBALL_NAME}}
           tar -c ${{env.ZIG_TARBALL_NAME}} | xz -T0 -v >${{github.workspace}}/${{env.ZIG_TARBALL_NAME}}.tar.xz
-          sudo mv zig-x86_64-linux-$ZIG_VERSION_NAME/*
-          sudo rmdir zig-x86_64-linux-$ZIG_VERSION_NAME
 
       - name: Upload release
         uses: ncipollo/release-action@v1.16.0
